fixed mobile overflow

--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ a {
 @media screen and (max-width: 450px) {
   body {
     padding: 1.9rem 1.2rem;
+    overflow: scroll;
   }
 
   nav ul li {
@@ -195,6 +196,7 @@ a {
     width: 100%;
     top: 0;
     margin-top: 2.5rem;
+    /* margin-bottom: 1rem; */
   }
   .card {
     width: 70%;
